[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameScenes/CommonAssets/PauseScreen.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.317647 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.3386
margin_top = -11.0807
margin_right = 36.6614
margin_bottom = 8.91928
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.308
anchor_right = 0.505
anchor_bottom = 0.308
margin_left = -37.742
margin_top = 27.4512
margin_right = 41.058
margin_bottom = 47.4512
text = "Full Screen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 300.012
margin_top = 203.642
margin_right = 341.012
margin_bottom = 223.642
text = "Save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Continue" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
